tests/paczka1/fuzzy1/54235427.err
Error in line 2: ZYkTJ S464 39,7
Error in line 5: ZYkTJ S954 685,4
Error in line 13: ZYkTJ S94 32,9
Error in line 24: nmDNd S954 23,5
Error in line 25: nmDNd S361 93,4
Error in line 36: ZYkTJ S361 95,28
